--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,10 @@ spring:
           timeout: 5000
           starttls:
             enable: 'true'
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 jwt:
   secret:
