--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
           timeout: 5000
           starttls:
             enable: 'true'
+  redis:
+    host:localhost
+    port:6379
 
 jwt:
   secret:
