🎉 FEAT: 유저 로그아웃 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
           timeout: 5000
           starttls:
             enable: 'true'
+            required: 'true'
   redis:
     host:localhost
     port:6379
