--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,12 +26,9 @@ spring:
           starttls:
             enable: 'true'
             required: 'true'
-      redis:
-        host: localhost
-        port: 6379
-  web:
-    resources:
-      add-mappings: true
+  redis:
+    host:localhost
+    port:6379
 
 jwt:
   secret:
@@ -52,6 +49,9 @@ custom:
     authorization: "auth"
     bearer: "Bearer "
 
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
+    spring:
+      web:
+        resources:
+          add-mappings: true
+      mvc:
+        static-path-pattern: /static/**
