--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     // Webjars
     implementation 'org.webjars:bootstrap:5.3.2'
     implementation 'org.webjars:jquery:3.7.1'
+
+    // Jython
+    implementation 'org.python:jython:2.7.3'
 }
 
 tasks.named('test') {
