--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         format_sql: 'true'
         show_sql: 'true'
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
   datasource:
     password: ${DB_PASSWORD}
     username: ${DB_USERNAME}
