--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     // MAIL
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
