Revert "Merge branch 'dev' of https://github.com/pallows/pallow into dev"
This reverts commit 19ff9cec2d6f5d693875fd0fdb13784b9ca235d0, reversing
changes made to 25fb60edb7cb0bbee653b0256ce06c3ef8d312dc.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,22 +36,27 @@ data:
       add-mappings: true
   mvc:
     static-path-pattern: /static/**
+
 jwt:
   secret:
-    key: ${JWT_SECRET_KEY}
-  access-token:
-    ttl: ${ACCESS_TOKEN_TTL}
-  refresh-token:
-    ttl: ${REFRESH_TOKEN_TTL}
-
+    key: ${JWT_KEY}
+  access:
+    expiration: ${JWT_ACCESS_EXPIRED_TIME}
+  refresh:
+    expiration: ${JWT_REFRESH_EXPIRED_TIME}
   redis:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
     password: ${REDIS_PASSWORD}
 
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
-kakao:
-  clientId: ${CLIENT_ID}
-  redirectUri: ${REDIRECT_URI}
+custom:
+  headers:
+    access: "Authorization"
+    refresh: "X-Refresh-Token"
+    authorization: "auth"
+    bearer: "Bearer "
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    com.pallow.pallow: DEBUG
