--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,11 +39,11 @@ data:
 
 jwt:
   secret:
-    key: ${JWT_KEY}
+    key: ${JWT_SECRET_KEY}
   access:
-    expiration: ${JWT_ACCESS_EXPIRED_TIME}
+    expiration: ${ACCESS_TOKEN_TTL}
   refresh:
-    expiration: ${JWT_REFRESH_EXPIRED_TIME}
+    expiration: ${REFRESH_TOKEN_TTL}
   redis:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
