--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,12 @@ spring:
           starttls:
             enable: 'true'
             required: 'true'
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2MB
+      max-request-size: 10MB
+      max-file-size: 10MB
 data:
   redis:
     host: localhost
@@ -36,27 +42,35 @@ data:
       add-mappings: true
   mvc:
     static-path-pattern: /static/**
-
 jwt:
   secret:
-    key: ${JWT_KEY}
-  access:
-    expiration: ${JWT_ACCESS_EXPIRED_TIME}
-  refresh:
-    expiration: ${JWT_REFRESH_EXPIRED_TIME}
+    key: ${JWT_SECRET_KEY}
+  access-token:
+    ttl: ${ACCESS_TOKEN_TTL}
+  refresh-token:
+    ttl: ${REFRESH_TOKEN_TTL}
+
   redis:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
     password: ${REDIS_PASSWORD}
 
-custom:
-  headers:
-    access: "Authorization"
-    refresh: "X-Refresh-Token"
-    authorization: "auth"
-    bearer: "Bearer "
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+kakao:
+  clientId: ${CLIENT_ID}
+  redirectUri: ${REDIRECT_URI}
 
-logging:
-  level:
-    org.springframework.security: DEBUG
-    com.pallow.pallow: DEBUG
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    region:
+      static: us-east-1
+    stack:
+      auto: false
+    s3:
+      bucket: pallowbucket
+
