--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -80,34 +80,19 @@ jobs:
             # 여기서의 환경 변수도 여러분 상황에 맞게 작성하시면 됩니다!!!
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_TAG_NAME }}:latest
             sudo docker run -it -d -p 8080:8080 \
-                -e CLIENT_ID=d21718e96e4084ceeeeb474c55d28d50 \
-                -e DB_PASSWORD=1q2w3e4r \
-                -e DB_URL=jdbc:mysql://localhost:3306/pallow \
-                -e DB_USERNAME=root \
-                -e ACCESS_TOKEN_TTL=6400000 \
-                -e REFRESH_TOKEN_TTL= 6400000 \
-                -e JWT_SECRET_KEY=GziP2tKme5j8oPnIcJxJmv7j+sSev3J1tBRExWgnSMeBBYtGq+RFXjsbA+4E8G5lBPOAriDxEr8B2B7W9T+F0w== \
-                -e MAIL_PASSWORD=festtsobwrueciig \
-                -e MAIL_USERNAME=seo78200@gmail.com \
-                -e REDIRECT_URI=http://localhost:8080/auth/oauth/callback \
-                -e REDIS_HOST=localhost \
-                -e REDIS_PORT=6379 \
+                -e CLIENT_ID=${{ secrets.CLIENT_ID }} \
+                -e DB_PASSWORD= ${{ secrets.DB_PASSWORD }} \
+                -e DB_URL=jdbc:${{ secrets.DB_URL }} \
+                -e DB_USERNAME= ${{ secrets.DB_USERNAME }} \
+                -e ACCESS_TOKEN_TTL= ${{ secrets.ACCESS_TOKEN_TTL }} \
+                -e REFRESH_TOKEN_TTL= ${{ secrets.REFRESH_TOKEN_TTL }} \
+                -e JWT_SECRET_KEY= ${{ secrets.JWT_SECRET_KEY }} \
+                -e MAIL_PASSWORD= ${{ secrets.MAIL_PASSWORD}} \
+                -e MAIL_USERNAME= ${{ secrets.MAIL_USERNAME}} \
+                -e REDIRECT_URI= ${{ secrets.REDIRECT_URI }} \
+                -e REDIS_HOST= ${{ secrets.REDIS_HOST }} \
+                -e REDIS_PORT= ${{ secrets.REDIS_PORT }} \
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_TAG_NAME }}:latest
-            
-            sudo docker run -it -d -p 8080:8080 \
-                -e CLIENT_ID=d21718e96e4084ceeeeb474c55d28d50 \
-                -e DB_PASSWORD=1q2w3e4r \
-                -e DB_URL=jdbc:mysql://localhost:3306/pallow \
-                -e DB_USERNAME=root \
-                -e ACCESS_TOKEN_TTL=6400000 \
-                -e REFRESH_TOKEN_TTL=6400000 \
-                -e JWT_SECRET_KEY=GziP2tKme5j8oPnIcJxJmv7j+sSev3J1tBRExWgnSMeBBYtGq+RFXjsbA+4E8G5lBPOAriDxEr8B2B7W9T+F0w== \
-                -e MAIL_PASSWORD=festtsobwrueciig \
-                -e MAIL_USERNAME=seo78200@gmail.com \
-                -e REDIRECT_URI=http://localhost:8080/auth/oauth/callback \
-                -e REDIS_HOST=localhost \
-                -e REDIS_PORT=6379 \
-            --name dqwerkahfmvkxl timevil/pal-world:latest /bin/bash
         
             
             
