--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     password: ${DB_PASSWORD}
     username: ${DB_USERNAME}
     url: ${DB_URL}
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db/schema.sql
   mail:
     host: smtp.gmail.com
     port: 587
@@ -32,16 +36,19 @@ spring:
       file-size-threshold: 2MB
       max-request-size: 10MB
       max-file-size: 10MB
-data:
-  redis:
-    host: localhost
-    port: 6379
-
+  data:
+    redis:
+      host: localhost
+      port: 6379
   web:
     resources:
       add-mappings: true
   mvc:
     static-path-pattern: /static/**
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
 jwt:
   secret:
     key: ${JWT_SECRET_KEY}
@@ -50,14 +57,11 @@ jwt:
   refresh-token:
     ttl: ${REFRESH_TOKEN_TTL}
 
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
+redis:
+  host: ${REDIS_HOST}
+  port: ${REDIS_PORT}
+  password: ${REDIS_PASSWORD}
 
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
 kakao:
   clientId: ${CLIENT_ID}
   redirectUri: ${REDIRECT_URI}
