--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - main
+      - dev
 
 env:
   DOCKER_IMAGE_TAG_NAME: pal-world
@@ -73,6 +74,7 @@ jobs:
             echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}"
             echo "REDIS_HOST=${{ secrets.REDIS_HOST }}"
             echo "REDIS_PORT=${{ secrets.REDIS_PORT }}"
+            echo "REDIS_PASSOWRD=${{ secrets.REDIS_PASSWORD }}"
             echo "FLASK_URL=${{ secrets.FLASK_URL }}"
 
             # Check if the Docker container is running
@@ -105,6 +107,7 @@ jobs:
                 -e REDIRECT_URI=${{ secrets.REDIRECT_URI }} \
                 -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
                 -e REDIS_PORT=${{ secrets.REDIS_PORT }} \
+                -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
                 -e FLASK_URL=${{ secrets.FLASK_URL }} \
                 -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} \
                 -e AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} \
