fix : 카카오맵 api 키 환경변수 추가 및 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,6 +57,8 @@ jwt:
 kakao:
   clientId: ${CLIENT_ID}
   redirectUri: ${REDIRECT_URI}
+  map:
+    app-key: ${KAKAO_MAP_APP_KEY}
 
 cloud:
   aws:
