--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - main
+      - dev
 
 env:
   DOCKER_IMAGE_TAG_NAME: pal-world
@@ -92,6 +93,7 @@ jobs:
                 -e FLASK_URL=${{ secrets.FLASK_URL }} \
                 -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} \
                 -e AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} \
+                -e  KAKAO_MAP_APP_KEY=${{ secrets.KAKAO_MAP_APP_KEY}} \
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_TAG_NAME }}:latest
 
             # Check the logs for debugging
